# diffusion-markets

./: .gitignore  main.tex  methodology.md  references.bib  rev1.diff  rev2.diff  rev3.diff  rev4.diff  rev5.diff  rev6.diff  rev7.diff  rev8.diff
experiments/: .gitignore  ADVERSARIAL_ANALYSIS.md  DYNAMIC_ENSEMBLE_ANALYSIS.md  EXPERIMENTS.md  EXPERIMENTS_CHANGELOG.md  PRODUCTION_PLAN.md  README.md  REMOTE_QUEUE_RECIPES.md  STAT_ARB_ANALYSIS.md  analyze_runs.py  backtesting.md  conftest.py  pyproject.toml  remote_gpu_queue_failures.jsonl  remote_queue.jsonl  remote_queue_state.json  risk_metrics.py  sync_on_complete.sh
experiments/backtest/: __init__.py  cli.py  config.py  ct_loader.py  ct_loader_legacy.py  engine.py  market_state.py  model_loader.py
experiments/docs/: market_prob_criteria.md  multi_model_ct_loader.md
experiments/optimization_results/: best_params_2025.json  best_params_v2.json
experiments/remote_results/: ct_mode_test_results.txt
experiments/scripts/: analyze_ct_approximation_error.py  analyze_exa_for_clustering.py  analyze_live_vs_backtest.py  analyze_residuals.py  analyze_rlcr_ct_error.py  backtest_decision_tree.py  backtest_momentum_strategies.py  build_backtest_database.py  build_unified_backtest_db.py  candle_aggregator.py  check_20k_eval_status.sh  check_training_status.sh  clustering_stat_arb_backtest.py  collect_clob_continuous.sh  compare_all_models_backtest.py  compare_platforms.py  constraint_arb_test.py  convergence_analysis.py  dispersion_strategy.py  fast_optimize_2025.py  fast_semantic_arb.py  fetch_all_clob_prices.py  (+59 more)
(+2267 files in other folders)
